[build-system]
requires = ["setuptools>=61.0", "torch==1.13.0"]
build-backend = "setuptools.build_meta"

[project]
name = "torch_rl_lib_gerben"
version = "0.0.1"
authors = [
  { name="Gerben Meijer", email="gerbenmeij@gmail.com" },
]
description = "Package containing torch implementations of some RL algorithms for personal experiments"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
#"Homepage" = "https://url.com"

