[tool.poetry]
name = "torch-rl-lib-gerben"
version = "0.1.0"
description = "Reinforcement Learning library for internal use"
authors = ["gerben <gerry2211@gmail.com>"]
license = "LICENSE"
readme = "README.md"
packages = [{include = "torch_rl_lib_gerben"}]

[tool.poetry.dependencies]
python = "^3.8"
torch = "1.13.1"
tensorboard = "2.11.0"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
